--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-image: url("img/hero.jpg");
-  background-color: #ccc;
+  background-color: #fff;
   height: 0;
   background-position: center;
   background-repeat: no-repeat;
@@ -15,20 +15,6 @@ body {
   width: 100%;
   height: 100vh;
   align-items: center;
-}
-
-header {
-  display: flex;
-  width: 98%;
-  background: #fff;
-  border: #737373 solid 2px;
-  border-radius: 10px;
-  flex-basis: 98%;
-  flex-grow: 0;
-  flex-shrink: 1;
-  height: 60px;
-  justify-content: space-between;
-  padding: 5px;
 }
 
 main {
@@ -47,11 +33,11 @@ main .images {
 .images-phones {
   width: 100%;
   display: flex;
-  margin-top: 130px;
+  margin-top: 212px;
 }
 
 .images-phones img {
-  width: 100%;
+  width: 99%;
 }
 
 main .images img {
@@ -60,9 +46,10 @@ main .images img {
 }
 
 nav {
-  margin-top: 10px;
+  margin-top: 85px;
   width: 90%;
-  margin-left: 4%;
+  position: relative;
+  left: 4%;
 }
 
 nav ul {
@@ -104,14 +91,16 @@ nav ul li a {
   color: white;
 }
 
-nav ul li a i {
+nav ul li a #search {
   position: relative;
-  right: 200px;
+  right: 90px;
   top: 2px;
-  color: gray;
+  color: white;
 }
 
 nav ul li input {
+  width: 100%;
+  background: grey;
   margin: 0 10px;
   border: none;
   border-radius: 8px;
@@ -119,83 +108,47 @@ nav ul li input {
   padding-left: 25px;
 }
 
-.left {
-  display: flex;
-  align-items: center;
-}
-
-.middle {
-  display: flex;
-  align-items: center;
-  flex-basis: 50%;
-}
-
-.middle input {
-  display: flex;
-  flex-basis: 100%;
-  padding: 0 10px;
-  border: #737373 solid 2px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  outline: none;
-  height: 30px;
-}
-
-.middle button {
-  height: 34px;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border: none;
-  background: #737373;
-  color: #fff;
-  cursor: pointer;
-}
-
-.about button {
-  border: none;
-  background: #737373;
+nav ul li input[value=""] {
   color: white;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.middle button:hover {
-  background: #000;
-}
-
-.help i,
-.social-media i,
-.about i {
-  font-size: 18px;
-  margin-right: 7px;
-  cursor: pointer;
-}
-
-.about button a:hover {
-  text-decoration: underline;
-  color: blue;
 }
 
 i:hover {
   color: blue;
 }
 
-.about button i {
-  color: white;
-}
-
 footer {
-  background: white;
-  padding: 10px 0;
+  font-family: sans-serif;
+  color: grey;
+  font-size: .8rem;
+  padding: 20px 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
+  align-items: flex-start;
+  width: 80%;
+}
+#last-images-video {
+  position: absolute;
+  top: 400px;
+  left: 250px;
+  height: 50px;
+  overflow: hidden;
+}
+
+#last-images-video img{
+  width: 750px;
+  height: 75px;
+}
+
+#last-images-video img:hover{
+  position: relative;
+  top: -45px;
+  cursor: pointer;
 }
 
 footer #footer-1 {
-  margin: 5px 0;
-  width: 100%;
   display: flex;
-  justify-content: space-around;
+  align-items: baseline;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  width: 100%;
 }
